[tool.poetry]
name = "music-viewer"
version = "0.1.0"
description = "Music View Api for spotify and youtube music"
authors = ["giraycoskun <giraycoskun@sabanciuniv.edu>"]
license = "MIT"
readme = "README.md"
packages = [{include = "music_viewer"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.88.0"
google-api-python-client = "^2.69.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
